<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDO</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_name">Task name</string>
    <string name="task_name_hint">Enter task name</string>
    <string name="due_date">Due date</string>
    <string name="select_date">Select date</string>
    <string name="status">Status</string>
    <string name="mark_done">Mark as done</string>
    <string name="save">Save</string>
    <string name="cancle">Cancle</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_tasks">No tasks yet.\nTap + to add one</string>
    <string name="todo">To do</string>
    <string name="done">Done</string>
    <string name="delete_confirm_title">Delete task</string>
    <string name="delete_confrim_message">Are you sure you want to delete this task?</string>
    <string name="task_save">Task save</string>
    <string name="task_delete">Task delete</string>
    <string name="task_name_required">Task name is required</string>
    <string name="all_task">All task</string>
    <string name="description">Enter task description</string>
    <string name="no_description">No description</string>
    <string name="description_hint">No description</string>
    <string name="task_detail">Task Detail</string>
    <string name="no_due_date">No due date</string>


</resources>